--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,14 @@
+body{
+    background-color: #271d28;
+}
 .menu-title {
     text-align: center;
     width: 800px;
+}
+
+h1,h2,h3,h4 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: larger;
+    margin: auto;
+    color:#ee00e8;
 }
