--- a/styles.css
+++ b/styles.css
@@ -88,13 +88,23 @@ Color: #946ea0
 .footer-social ul {
     display: flex;
     justify-content: center; 
-    padding: 0;
-    margin: 0;
+    padding: 10;
+    margin: 10;
     list-style-type: none;
+    gap: 80px;
 }
 .socials {
-    height: 100px;
-    width: 100px;
-    font-size: 100px;
+    height: 50px;
+    width: 50px;
+    font-size: 500px;
     }
-    
+
+nav ul {
+    display: flex;
+    justify-content: center; 
+    padding: 10;
+    margin: 10;
+    list-style-type: none;
+    gap: 200px;
+    font-size: medium;
+}
