--- a/styles.css
+++ b/styles.css
@@ -88,8 +88,8 @@ Color: #946ea0
 .footer-social ul {
     display: flex;
     justify-content: center; 
-    padding: 10;
-    margin: 10;
+    padding: 10px;
+    margin: 10px;
     list-style-type: none;
     gap: 80px;
 }
@@ -102,8 +102,8 @@ Color: #946ea0
 nav ul {
     display: flex;
     justify-content: center; 
-    padding: 10;
-    margin: 10;
+    padding: 10px;
+    margin: 10px;
     list-style-type: none;
     gap: 200px;
     font-size: medium;
